--- a/product/talend-qlik.html
+++ b/product/talend-qlik.html
@@ -600,12 +600,13 @@
                             <!-- <h1 class="display-5 fw-bold">Qlik Talend</h1>Automate Qlik Talend Deployments with Devozy.ai -->
                             <h1 class="display-5 fw-bold">Automate Qlik Talend Deployments with Devozy.ai</h1>
                             <p class="lead"> 
-                                Devozy.ai (No Code) Platform automates CICD and publish your Standard jobs, Camel routes to  Talend Management Console (TMC) and/or Talend Administration Center (TAC) instantly. Supports below use cases for Qlik Talend Customers:
+                                Devozy.ai (No Code) Platform automates CICD Pipelines and publish your Standard jobs, Camel routes to  Talend Management Console (TMC) and/or Talend Administration Center (TAC) instantly. Supports below use cases for Qlik Talend Customers:
                              </p>
                              <ul style="list-style: none; padding-left: 0;">
                                 <li><strong>⚡ Accelerate Qlik Talend Build & Deployments from Day 1</strong></li> 
                                 <li><strong>☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</strong></li> 
                                 <li><strong>🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</strong></li> 
+                                <li><strong>🔄 Qlik Talend Java v17 and Apache Camel v4 Upgrade</strong></li> 
                                 <li><strong>🌍 QTC (Qlik Talend Cloud) Region Changes</strong></li> 
                                 <li><strong>🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</strong></li> 
                                 <li><strong>🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</strong></li> 
@@ -628,7 +629,7 @@
                                     <p>
                                       Devozy.ai’s no-code platform empowers Qlik Talend developers to deploy jobs instantly and publish to Talend Management Console (TMC) and/or Talend Administration Center (TAC) from day one.
                                       With seamless integration to Nexus, GitHub, and SonarQube, deployments happen in just a few clicks—no manual steps, no DevOps hassle.
-                                      This automation boosts productivity by up to 5x and cuts project costs by 10x.
+                                      This automation boosts Qlik Talend Developer's productivity by up to 5x and cuts Qlik Talend project costs by 10x.
                                     </p>
                                   
                                     <hr style="margin: 1.5rem 0; border: 0; border-top: 1px solid #eee;" />
