Qlik talend landing screen imporvements

--- a/qlik-talend.html
+++ b/qlik-talend.html
@@ -605,14 +605,13 @@
                                 Devozy.ai (No Code) Platform automates CICD Pipelines and publish your Standard jobs, Camel routes to  Talend Management Console (TMC) and/or Talend Administration Center (TAC) instantly. Supports below use cases for Qlik Talend Customers:
                              </p>
                              <ul style="list-style: none; padding-left: 0;">
-                                <li><strong>⚡ Accelerate Qlik Talend Build & Deployments from Day 1</strong></li> 
-                                <li><strong>☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</strong></li> 
-                                <li><strong>🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</strong></li> 
-                                <li><strong>🔄 Qlik Talend Java v17 and Apache Camel v4 Upgrade</strong></li> 
-                                <li><strong>🌍 QTC (Qlik Talend Cloud) Region Changes</strong></li> 
-                                <li><strong>🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</strong></li> 
-                                <li><strong>🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</strong></li> 
-                                <li><strong>📊 Qlik Talend Jobs Code Quality (SonarQube) Scanning in Pipeline</strong></li> 
+                              <li><strong>⚡ Accelerate Qlik Talend Build & Deployments from Day 1</strong></li> 
+                              <li><strong>☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</strong></li> 
+                              <li><strong>🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</strong></li> 
+                              <li><strong>🔄 Qlik Talend Java v17 and Apache Camel v4 Upgrade</strong></li> 
+                              <li><strong>🌍 QTC (Qlik Talend Cloud) Region Changes</strong></li> 
+                              <li><strong>🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</strong></li> 
+                              <li><strong>🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</strong></li> 
                             </ul>                            
                         </div>
                     </div>
@@ -627,11 +626,11 @@
                         <div class="row align-content-center justify-content-center">
                             <div class="col-lg-6 col-md-12">
                                 <div style="font-size: 16px; line-height: 1.7; max-width: 720px; margin: auto;">
-                                    <h2><strong>Tailored Developer Self Service Platform for Qlik Talend Deployments</strong></h2>
+                                    <h2>Tailored Developer Self Service Platform for Qlik Talend Deployments</h2>
                                     <p>
                                       Devozy.ai’s no-code platform empowers Qlik Talend developers to deploy jobs instantly and publish to Talend Management Console (TMC) and/or Talend Administration Center (TAC) from day one.
                                       With seamless integration to Nexus, GitHub, and SonarQube, deployments happen in just a few clicks—no manual steps, no DevOps hassle.
-                                      This automation boosts Qlik Talend Developer's productivity by up to 5x and cuts Qlik Talend project costs by 10x.
+                                      This automation boosts Qlik Talend Developer's productivity by up to 5x and cuts project costs by 10x.
                                     </p>
                                   
                                     <hr style="margin: 1.5rem 0; border: 0; border-top: 1px solid #eee;" />
@@ -704,7 +703,7 @@
                             <!-- Embedded YouTube Videos -->
 <!-- Embedded YouTube Videos -->
 <div class="mt-4">
-  <h5 class="text-center mb-3">🎥 Learn more how Qlik Talend deployment works </h5>
+  <h3 class="text-center mb-4">Learn more how Qlik Talend deployment works </h3>
   <div class="row">
     <div class="col-12 col-md-6 mb-3">
       <div class="ratio ratio-16x9">
@@ -728,7 +727,7 @@
     </div>
   </div>
 </div>
-<!-- <div class="section-wrapper">
+<div class="section-wrapper">
     <h2>Why Choose Devozy for Qlik Talend Deployments</h2>
   
     <h3>🛠️ Developer Challenges</h3>
@@ -857,37 +856,38 @@
       </thead>
       <tbody>
         <tr>
-          <td data-label="Feature">Self-Service</td>
-          <td data-label="Devozy">✅</td>
-          <td data-label="Jenkins">❌</td>
-          <td data-label="GitHub">❌</td>
-          <td data-label="GitLab">❌</td>
+          <td>Self-Service</td>
+          <td>✅</td>
+          <td>❌</td>
+          <td>❌</td>
+          <td>❌</td>
         </tr>
         <tr>
-          <td data-label="Feature">Talend Integration</td>
-          <td data-label="Devozy">✅</td>
-          <td data-label="Jenkins">❌</td>
-          <td data-label="GitHub">❌</td>
-          <td data-label="GitLab">❌</td>
+          <td>Talend Integration</td>
+          <td>✅</td>
+          <td>❌</td>
+          <td>❌</td>
+          <td>❌</td>
         </tr>
         <tr>
-          <td data-label="Feature">No DevOps Required</td>
-          <td data-label="Devozy">✅</td>
-          <td data-label="Jenkins">❌</td>
-          <td data-label="GitHub">❌</td>
-          <td data-label="GitLab">❌</td>
+          <td>No DevOps Required</td>
+          <td>✅</td>
+          <td>❌</td>
+          <td>❌</td>
+          <td>❌</td>
         </tr>
         <tr>
-          <td data-label="Feature">Incremental Deployments</td>
-          <td data-label="Devozy">✅</td>
-          <td data-label="Jenkins">❌</td>
-          <td data-label="GitHub">❌</td>
-          <td data-label="GitLab">❌</td>
+          <td>Incremental Deployments</td>
+          <td>✅</td>
+          <td>❌</td>
+          <td>❌</td>
+          <td>❌</td>
         </tr>
       </tbody>
     </table>
   </div>
-   -->
+  
+  
 
                     </div>
                     </div>
