Footer and Nav Bar Improvements

--- a/IT Eng Team/idp_market_research.html
+++ b/IT Eng Team/idp_market_research.html
@@ -89,7 +89,8 @@
                     <div class="clearfix"></div>
                    <!-- website view -->
                    <div class="collapse navbar-collapse justify-content-center">
-                    <ul class="nav col-12 col-md-auto justify-content-center main-menu">                         
+                    <ul class="nav col-12 col-md-auto justify-content-center main-menu">     
+                        <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                             <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
@@ -210,7 +211,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/talend-qlik-integration.html">         
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../Talendlogo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
 
                                           </span>
                                           <div style="margin-left: 12px;">
@@ -346,6 +347,7 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="nav col-12 col-md-auto justify-content-center main-menu">
+                        <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                             <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
@@ -466,7 +468,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/talend-qlik-integration.html">         
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../Talendlogo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
 
                                           </span>
                                           <div style="margin-left: 12px;">
