--- a/qlik-talend.html
+++ b/qlik-talend.html
@@ -769,7 +769,11 @@
       </div>
     </div>
     
-  
+    <div class="cta-wrapper ptb-60">
+      <button onclick="window.location.href='javascript:void(0);'" data-bs-toggle="modal" data-bs-target="#devozyTrialModal" name="getdevozyfree" type="submit" class="btn btn-primary"  style="background-color: #F154FF;border-color: #F154FF;"> Experience Developer Self-Service
+      </button>
+    </div>
+
     <h3>🔄 How It Works</h3>
     <p><strong>Full Build incl CICD Pipeline setup</strong></p>
     <div class="workflow-boxes">
@@ -840,7 +844,13 @@
         </tr>
       </tbody>
     </table>
+    <div class="cta-wrapper">
+      <button onclick="window.location.href='javascript:void(0);'" data-bs-toggle="modal" data-bs-target="#devozyTrialModal" name="getdevozyfree" type="submit" class="btn btn-primary"  style="background-color: #F154FF;border-color: #F154FF;"> Start Saving with Devozy
+      </button>
+    </div>
   </div>
+
+ 
 
   <div class="comparison-wrapper">
     <h3>⚖️ Comparison with Other CI Tools</h3>
@@ -887,7 +897,10 @@
     </table>
   </div>
   
-  
+   <div class="cta-wrapper">
+      <button onclick="window.location.href='javascript:void(0);'" data-bs-toggle="modal" data-bs-target="#devozyTrialModal" name="getdevozyfree" type="submit" class="btn btn-primary"  style="background-color: #F154FF;border-color: #F154FF;"> Choose Devozy as Your DevOps Tool
+      </button>
+    </div>
 
                     </div>
                     </div>
