--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -93,7 +93,8 @@
                     <div class="clearfix"></div>
                 <!-- website view -->
                 <div class="collapse navbar-collapse justify-content-center">
-                    <ul class="nav col-12 col-md-auto justify-content-center main-menu">                         
+                    <ul class="nav col-12 col-md-auto justify-content-center main-menu">   
+                        <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                             <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
@@ -350,6 +351,7 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="nav col-12 col-md-auto justify-content-center main-menu">
+                    <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                         <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
