--- a/request-demo.html
+++ b/request-demo.html
@@ -121,7 +121,8 @@
                     <div class="clearfix"></div>
                   
                     <div class="collapse navbar-collapse justify-content-center">
-                        <ul class="nav col-12 col-md-auto justify-content-center main-menu">                         
+                        <ul class="nav col-12 col-md-auto justify-content-center main-menu">  
+                            <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                                 <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
@@ -375,6 +376,7 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="nav col-12 col-md-auto justify-content-center main-menu">
+                        <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                             <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
