Whatsapp marketing implementation

--- a/product/dessa.html
+++ b/product/dessa.html
@@ -933,7 +933,7 @@
     <script src="../assets/js/vendors/massonry.min.js"></script>
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/form-handler.js"></script>
-
+    <script src="../assets/js/whatsappmodal.js"></script>
     <!--endbuild-->
 </body>
 
