--- a/IT Eng Team/agile_int_devops.html
+++ b/IT Eng Team/agile_int_devops.html
@@ -753,6 +753,7 @@
     <script src="../assets/js/vendors/aos.js"></script>
     <script src="../assets/js/vendors/massonry.min.js"></script>
     <script src="../assets/js/app.js"></script>
+    <script src="../assets/js/whatsappmodal.js"></script>
     <!--endbuild-->
 </body>
 
