--- a/Innovatie Integration/aws-integration.html
+++ b/Innovatie Integration/aws-integration.html
@@ -1051,6 +1051,7 @@
     <script src="../assets/js/vendors/massonry.min.js"></script>
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/form-handler.js"></script>
+    <script src="../assets/js/whatsappmodal.js"></script>
     <!--endbuild-->
 </body>
 
