--- a/request-demo.html
+++ b/request-demo.html
@@ -934,6 +934,7 @@ $(document).ready(function() {
     <script src="assets/js/vendors/aos.js"></script>
     <script src="assets/js/vendors/massonry.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/whatsappmodal.js"></script>
     <!--endbuild-->
 </body>
 
