--- a/thankyou2.html
+++ b/thankyou2.html
@@ -118,6 +118,8 @@
      <script src="assets/js/vendors/aos.js"></script>
      <script src="assets/js/vendors/massonry.min.js"></script>
      <script src="assets/js/app.js"></script>
+     <script src="assets/js/whatsappmodal.js"></script>
+
      <!--endbuild-->
 
  
