--- a/IT Eng Team/Key_diff_dev&idp.html
+++ b/IT Eng Team/Key_diff_dev&idp.html
@@ -589,7 +589,8 @@
 
     <!--page header section start-->
     <section class="page-header position-relative overflow-hidden ptb-120 bg-dark"
-        style="background: url('assets/img/page-header-bg.svg')no-repeat bottom left">
+    style="background:linear-gradient(135deg, #4F00FF 0%, #C800FF 33%, #f6a368 66%, #ff809d 100%)
+, url('assets/img/shape/dot-dot-wave-shape.svg')no-repeat bottom center">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-8 col-12">
