--- a/index.html
+++ b/index.html
@@ -1539,7 +1539,8 @@ No DevOps. No Scripts. Just Click & Deploy.
                 </div>
             </div>
             <!--footer bottom end-->
-        </footer> <!--footer section end-->
+        </footer> 
+        <!--footer section end-->
 
 
     </div>
