New button Implementation

--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,10 @@ No DevOps. No Scripts. Just Click & Deploy.
             </div>
         </section>
         <!-- Newsletter End -->
-         
+        <div class="cta-wrapper">
+            <button onclick="window.location.href='javascript:void(0);'" data-bs-toggle="modal" data-bs-target="#devozyTrialModal" name="getdevozyfree" type="submit" class="btn btn-primary"  style="background-color: #F154FF;border-color: #F154FF;"> Start Modernizing DevOps
+            </button>
+          </div>
         <section id="review" class="testimonial-section ptb-60 ">
             <div class="container">
                 <div class="row justify-content-center align-content-center">
