qlik talend case study implementation

--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                 <div class="row align-items-center  justify-content-lg-between">
                     <div class="col-xl-7 col-lg-7">
                         <div class="hero-content-wrap text-start text-xl-start text-lg-start" data-aos="fade-right">
-                            <h1 class="text-white">The Ultimate DevOps Automation Platform</h1>
+                            <h1 class="text-white">The Ultimate DevOps Automation Platform</h1>                            
                             <h1 class="text-white" style="font-size: 24px;"> Let your developers focus on building great products Devozy.ai automates the rest from day 1.</h1>
                             <!-- <p class="lead">Devozy.ai is an AI-powered self-service IDP platform that delivers from day one, streamlining cloud provisioning, automation, scaling, monitoring, and security boosting productivity 5x and cutting costs 10x.</p> -->
                             <p class="features-list text-white mt-3" style="font-size: 15px; line-height: 2.2;">
@@ -815,6 +815,10 @@ No DevOps. No Scripts. Just Click & Deploy.
                     </div>
                     <div class="col-xl-5 col-lg-5 mt-4 mt-xl-0">
                         <!-- <div class="hero-img-wrap position-relative" data-aos="fade-left"> -->
+                            <p class="devozy-cost-highlight">
+                                Enabling startups and small enterprises to bring down the DevOps CI/CD run costs under 
+                                <span class="devozy-cost-number">$99/month</span>
+                              </p>  
                             <div class="animated-features">
                                 <div class="animated-feature-wrapper">
                                     <div class="animated-feature delay-1">🚀 Accelerate Qlik Talend DevOps and Upgrades</div>
