--- a/qlik-talend.html
+++ b/qlik-talend.html
@@ -604,15 +604,25 @@
                             <p class="lead"> 
                                 Devozy.ai (No Code) Platform automates CICD Pipelines and publish your Standard jobs, Camel routes to  Talend Management Console (TMC) and/or Talend Administration Center (TAC) instantly. Supports below use cases for Qlik Talend Customers:
                              </p>
-                             <ul style="list-style: none; padding-left: 0;">
-                              <li><strong>⚡ Accelerate Qlik Talend Build & Deployments from Day 1</strong></li> 
+                             <!-- <ul style="list-style: none; padding-left: 0;">
+                              <li><strong>⚡ Accelerate Qlik Talend Build & Deployments from Day 1</strong><span style="text-decoration: underline; cursor: pointer;">Read more</span></li> 
                               <li><strong>☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</strong></li> 
                               <li><strong>🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</strong></li> 
                               <li><strong>🔄 Qlik Talend Java v17 and Apache Camel v4 Upgrade</strong></li> 
                               <li><strong>🌍 QTC (Qlik Talend Cloud) Region Changes</strong></li> 
                               <li><strong>🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</strong></li> 
                               <li><strong>🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</strong></li> 
+                            </ul>      -->
+                            <ul class="custom-list">
+                              <li><a href="" class="list-item">⚡ Accelerate Qlik Talend Build & Deployments from Day 1</a></li>
+                              <li><a href="#" class="list-item">☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</a></li>
+                              <li><a href="#" class="list-item">🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</a></li>
+                              <li><a href="/qlik talend case study/java_camel_upgrade.html" class="list-item">🔄 Qlik Talend Java v17 and Apache Camel v4 Upgrade</a></li>
+                              <li><a href="#" class="list-item">🌍 QTC (Qlik Talend Cloud) Region Changes</a></li>
+                              <li><a href="#" class="list-item">🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</a></li>
+                              <li><a href="#" class="list-item">🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</a></li>
                             </ul>                            
+                                                   
                         </div>
                     </div>
                     <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light right-5"></div>
