--- a/qlik-talend.html
+++ b/qlik-talend.html
@@ -614,13 +614,13 @@
                               <li><strong>🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</strong></li> 
                             </ul>      -->
                             <ul class="custom-list">
-                              <li><a href="" class="list-item">⚡ Accelerate Qlik Talend Build & Deployments from Day 1</a></li>
-                              <li><a href="#" class="list-item">☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</a></li>
-                              <li><a href="#" class="list-item">🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</a></li>
+                              <li><a href="/qlik talend case study/qlit_talend_deployments_from_day1.html" class="list-item">⚡ Accelerate Qlik Talend Build & Deployments from Day 1</a></li>
+                              <li><a href="/qlik talend case study/qlik_talend_onprem.html" class="list-item">☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</a></li>
+                              <li><a href="/qlik talend case study/qlik_talend_version_control.html" class="list-item">🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</a></li>
                               <li><a href="/qlik talend case study/java_camel_upgrade.html" class="list-item">🔄 Qlik Talend Java v17 and Apache Camel v4 Upgrade</a></li>
-                              <li><a href="#" class="list-item">🌍 QTC (Qlik Talend Cloud) Region Changes</a></li>
-                              <li><a href="#" class="list-item">🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</a></li>
-                              <li><a href="#" class="list-item">🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</a></li>
+                              <li><a href="/qlik talend case study/qlik_talend_region_change.html" class="list-item">🌍 QTC (Qlik Talend Cloud) Region Changes</a></li>
+                              <li><a href="/qlik talend case study/qlik_talend_synk.html" class="list-item">🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</a></li>
+                              <li><a href="/qlik talend case study/qlik_talend_unit_regression.html" class="list-item">🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</a></li>
                             </ul>                            
                                                    
                         </div>
