--- a/qlik-talend.html
+++ b/qlik-talend.html
@@ -684,7 +684,7 @@
                                         <div class="modal-dialog modal-dialog-centered">
                                           <div class="modal-content">
                                             <div class="modal-header">
-                                              <h5 class="modal-title" id="devozyTrialModalLabel">🚀 Try Devozy.ai for Free</h5>
+                                              <h5 class="modal-title" id="devozyTrialModalLabel">🚀 Try Devozy.ai for Qlik Talend CICD</h5>
                                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
