--- a/qlik-talend.html
+++ b/qlik-talend.html
@@ -876,28 +876,28 @@
       </thead>
       <tbody>
         <tr>
-          <td>Self-Service</td>
+          <td>Self-Service Talend DevOps</td>
           <td>✅</td>
           <td>❌</td>
           <td>❌</td>
           <td>❌</td>
         </tr>
         <tr>
-          <td>Talend Integration</td>
+          <td>Talend Cloud Integration</td>
           <td>✅</td>
           <td>❌</td>
           <td>❌</td>
           <td>❌</td>
         </tr>
         <tr>
-          <td>No DevOps Required</td>
+          <td>No DevOps Skills Required</td>
           <td>✅</td>
           <td>❌</td>
           <td>❌</td>
           <td>❌</td>
         </tr>
         <tr>
-          <td>Incremental Deployments</td>
+          <td>Incremental Jobs Deployments</td>
           <td>✅</td>
           <td>❌</td>
           <td>❌</td>
