--- a/index.html
+++ b/index.html
@@ -262,7 +262,13 @@
                                 <a href="#home" class="nav-link" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">Home</a>         
                             </li> -->
-                            <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Qlik CICD</a>
+                            <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
+                                <a target="_self" class="dropdown-item" href="/qlik-talend.html">Qlik Talend CICD</a>
+                                <a target="_self" class="dropdown-item" href="/qlik-replicate.html">Qlik Replicate CICD</a>
+                            </div>
+                        </li>
                              
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
