--- a/request-demo.html
+++ b/request-demo.html
@@ -122,7 +122,43 @@
                   
                     <div class="collapse navbar-collapse justify-content-center">
                         <ul class="nav col-12 col-md-auto justify-content-center main-menu">  
-                            <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
+                                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Qlik CICD</a>
+                                <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
+                                    <div class="dropdown-grid rounded-custom width-full-3" >
+                                        <div class="dropdown-grid-item bg-white" >            
+                                            <a target="_self" class="dropdown-item"
+                                            href="qlik-talend.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 100px;" src="../qlik talend logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Talend CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                  Automate Talend deployments to <br> 
+                                                  accelerate delivery and boost <br> developer productivity.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
+                                            <a target="_self" class="dropdown-item"
+                                            href="qlik-replicate.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="../Qlik Replicate logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Replicate CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Streamline data replication <br> with CI/CD for seamless <br> DevOps integration.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                        <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
+                                            <a href="#">
+                                                <img src="../qlik-talend-illustration..png" alt="add" class="img-fluid rounded-custom"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li> 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                                 <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
@@ -376,7 +412,43 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="nav col-12 col-md-auto justify-content-center main-menu">
-                        <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
+                                          <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Qlik CICD</a>
+                                <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
+                                    <div class="dropdown-grid rounded-custom width-full-3" >
+                                        <div class="dropdown-grid-item bg-white" >            
+                                            <a target="_self" class="dropdown-item"
+                                            href="qlik-talend.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 100px;" src="../qlik talend logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Talend CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                  Automate Talend deployments to <br> 
+                                                  accelerate delivery and boost <br> developer productivity.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
+                                            <a target="_self" class="dropdown-item"
+                                            href="qlik-replicate.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="../Qlik Replicate logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Replicate CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Streamline data replication <br> with CI/CD for seamless <br> DevOps integration.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                        <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
+                                            <a href="#">
+                                                <img src="../qlik-talend-illustration..png" alt="add" class="img-fluid rounded-custom"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li> 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                             <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
