--- a/request-demo.html
+++ b/request-demo.html
@@ -436,7 +436,7 @@
                                                 <img  style="height: 30px; width: 60px" src="../Qlik Replicate logo.png"></img>
                                                 <div class="logo-color drop-title">Qlik Replicate CICD</div>
                                                 <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
-                                                    Data replication <br> with CI/CD for seamless <br> DevOps integration.
+                                                   Streamline data replication <br> with CI/CD for seamless <br> DevOps integration.
                                                 </div>
                                             </div>
                                             </a>
