--- a/request-demo.html
+++ b/request-demo.html
@@ -689,8 +689,8 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold text-dark display-5"> Fill out the form and we'll be in touch as soon as possible. </h1>                              
-                            <p class="h5 text-dark"> You get one application hosted into cloud with monthly 3 continuous deployments free</p>
+                            <h1 class="fw-bold text-dark display-5"> Ultimate DevOps Self-service Platform </h1>                              
+                            <p class="h5 text-dark"> Free: You get 1 application hosted into cloud with monthly 3 continuous deployments</p>
                             <!-- <p>🎁 Unlock These, Instantly — Just for Signing Up</p>
                             <p>🎁 Free 1 Application Environment Setup in – AWS, Azure, or GCP</p> -->
                         </div>
